--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -3,17 +3,31 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
 .cocktail-card-container {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 1vw;
+  justify-items: center;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-row-gap: 5vh;
 
 }
 
 .cocktail-card {
-  border: solid 1px grey;
+  width: 30vw;
   padding: 8px;
-  border-radius: 16px;
+  border-radius: 8px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://source.unsplash.com/500x400/?cocktail');
 
 }
 
 .ingredients {
 
 }
+
+
+// @media (max-width: 960px) {
+//   .cocktail-card-container {
+//     grid-template-columns: 1fr 1fr;
+//   }
+// }
