--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,13 +22,9 @@
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><%= link_to 'Home', root_path %></li>
             <li>
-              <form method="post" action="/query">
-                <div class="input-field">
-                  <input id="search" type="search" name="cocktail" required>
-                  <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                  <i class="material-icons">close</i>
+              <form class="search-bar" method="post" action="/query">
+                  <input id="search" type="search" name="cocktail" required placeholder="search cocktail">
                   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-                </div>
               </form>
             </li>
             <li><%= link_to 'Add Cocktail', new_path %></li>
