--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,20 @@
 
 body {
   text-align: center;
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
+.search-bar input {
+  color: white;
+  text-align: center;
+}
 
+a {
+  color: inherit;
+  text-decoration: none !important;
+}
+
+nav a:hover {
+  font-size: 20px;
+  color: inherit;
+}
