--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -15,6 +15,11 @@
     <label for="exampleFormControlTextarea1">Dose</label>
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="1" name="description"></textarea>
   </div>
+  <div class="form-group">
+    <label for="photo">Photo</label>
+    <input class="form-control" type="file" id="photo" rows="1" name="photo"></input>
+  </div>
+
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
