--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,16 +14,12 @@
 
 @import "cocktails";
 @import "doses";
+@import "reviews";
 
 
 body {
-  text-align: center;
   text-decoration: none !important;
-}
-
-.search-bar input {
-  color: white;
-  text-align: center;
+  background-color: #4f3961;
 }
 
 a {
@@ -31,7 +27,184 @@ a {
   text-decoration: none !important;
 }
 
-nav a:hover {
-  font-size: 20px;
+a:hover {
   color: inherit;
 }
+
+#nav-search-bar {
+  text-align: center;
+
+}
+
+#logo {
+  position: absolute;
+  top: 40px;
+  font-size: 36px;
+  color: crimson;
+  width: 100%;
+  background-color: white;
+  text-align: center;
+  padding: 10px;
+  font-family: "Work Sans", Helvetica, sans-serif;
+}
+
+#logo a:hover {
+  text-shadow: 0 0 15px rgba(0,0,0,0.2);
+}
+
+#add-button {
+  position: absolute;
+  right: 30px;
+  top: 50px;
+  color: crimson;
+  border: 1px solid crimson;
+  border-radius: 24px;
+  padding: 14px;
+  transition: 0.6s;
+}
+
+#add-button:hover {
+  color: white;
+  background-color: crimson;
+
+}
+
+#add-button a:hover {
+  text-decoration: none;
+  color: inherit;
+}
+
+
+
+@import url('https://fonts.googleapis.com/css?family=Inconsolata:700');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  background: #252525;
+}
+
+.container {
+  position: absolute;
+  top: 27px;
+  left: -70px;
+  width: 300px;
+  height: 100px;
+  .search {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 80px;
+    height: 80px;
+    background: crimson;
+    border-radius: 50%;
+    transition: all 1s;
+    z-index: 4;
+    box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.4);
+    // box-shadow: 0 0 25px 0 crimson;
+    &:hover {
+      cursor: pointer;
+    }
+    &::before {
+      content: "";
+      position: absolute;
+      margin: auto;
+      top: 22px;
+      right: 0;
+      bottom: 0;
+      left: 22px;
+      width: 12px;
+      height: 2px;
+      background: white;
+      transform: rotate(45deg);
+      transition: all .5s;
+    }
+    &::after {
+      content: "";
+      position: absolute;
+      margin: auto;
+      top: -5px;
+      right: 0;
+      bottom: 0;
+      left: -5px;
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      border: 2px solid white;
+      transition: all .5s;
+    }
+  }
+  input {
+    font-family: 'Inconsolata', monospace;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 50px;
+    height: 50px;
+    outline: none;
+    border: none;
+    // border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    background: crimson;
+    color: white;
+    text-shadow: 0 0 10px crimson;
+    padding: 0 80px 0 20px;
+    border-radius: 30px;
+    box-shadow: 0 0 25px 0 crimson,
+                0 20px 25px 0 rgba(0, 0, 0, 0.2);
+    // box-shadow: inset 0 0 25px 0 rgba(0, 0, 0, 0.5);
+    transition: all 1s;
+    opacity: 0;
+    z-index: 5;
+    font-weight: bolder;
+    letter-spacing: 0.1em;
+    &:hover {
+      cursor: pointer;
+    }
+    &:focus {
+      width: 300px;
+      opacity: 1;
+      cursor: text;
+    }
+    &:focus ~ .search {
+      right: -250px;
+      background: #151515;
+      z-index: 6;
+      &::before {
+        top: 0;
+        left: 0;
+        width: 25px;
+      }
+      &::after {
+        top: 0;
+        left: 0;
+        width: 25px;
+        height: 2px;
+        border: none;
+        background: white;
+        border-radius: 0%;
+        transform: rotate(-45deg);
+      }
+    }
+    &::placeholder {
+      color: white;
+      opacity: 0.5;
+      font-weight: bolder;
+    }
+  }
+}
+
