--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -2,32 +2,262 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-.cocktail-card-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-column-gap: 1vw;
-  justify-items: center;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-row-gap: 5vh;
-
+.cocktail-cards-container {
+  margin: 200px auto;
+  width: 1130px;
+  padding: 24px;
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  height: 500px;
 }
 
+@media (max-width: 960px) {
+  .cocktail-cards-container {
+    width: 770px;
+  }
+}
+
+@media (max-width: 560px) {
+  .cocktail-cards-container {
+    width: 400px;
+  }
+}
+
+
 .cocktail-card {
-  width: 30vw;
+  flex: 0 0 auto;
+  width: 350px;
   padding: 8px;
+  height: 400px;
   border-radius: 8px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://source.unsplash.com/500x400/?cocktail');
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
+}
 
+.cocktail-card:hover {
+}
+
+.cocktail-card h2 {
+  position: relative;
+  top: 120px;
+  font-weight: bold;
+  background-color: rgba(0,0,0,0.1);
+  width: 100%;
+  text-align: center;
+  color: white;
+  height: 80px;
+  padding: 16px;
+}
+
+.cocktail-card h2:hover {
+  text-decoration: none;
+  font-size: 36px;
+  background-color: rgba(0,0,0,0.6);
+  color: white;
+  border-radius: 4px;
+}
+
+.cocktail-card a:hover {
+  color: inherit;
 }
 
 .ingredients {
+ box-shadow: 0 0 15px rgba(0,0,0,0.4);
+ background-color: rgba(0,0,0,0.1);
+ color: white;
+ border-color: grey;
+ border-radius: 8px;
+ width: 100%;
+ height: 100px;
+ padding: 10px;
+ text-shadow: 0 0 15px rgba(0,0,0,0.4);
+ position: relative;
+ top: 150px;
+ overflow: auto;
+ line-height: 16px;
+}
 
+#index-trash {
+ position: relative;
+ left: 0px;
+ top: 0px;
+ background-color: white;
+ border-radius: 50%;
+ padding: 8px;
+}
+
+#index-trash:hover {
+ text-decoration: none;
+ color: inherit;
+ font-size: 20px;
+ padding: 6px;
+ padding-left: 8px;
+ padding-right: 8px;
+}
+
+.add-ingredients-form-container {
+  width: 50%;
+  margin: 48px auto;
+  padding: 16px;
+  border-radius: 8px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
 
-// @media (max-width: 960px) {
-//   .cocktail-card-container {
-//     grid-template-columns: 1fr 1fr;
-//   }
-// }
+// show
+
+.cocktail-card-show {
+  flex: 0 0 auto;
+  width: 400px;
+  padding: 8px;
+  height: 600px;
+  border-radius: 8px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 0;
+  margin-left: 100px;
+}
+
+.cocktail-card-show h2 {
+  position: relative;
+  top: 6px;
+  font-weight: bold;
+  background-color: rgba(0,0,0,0.1);
+  width: 100%;
+  text-align: center;
+  color: white;
+  height: 80px;
+  padding: 16px;
+}
+
+.ingredient-info-show {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgba(255,255,255,0.6);
+  color: #252524;
+  margin: 2px;
+  border-radius: 4px;
+  padding: 8px;
+  align-items: center;
+}
+
+.ingredient-text {
+  text-align: center;
+}
+
+.ingredient-text p {
+  margin: 6px;
+}
+
+.ingredients-card-show {
+ box-shadow: 0 0 15px rgba(0,0,0,0.4);
+ color: white;
+ border-color: grey;
+ border-radius: 8px;
+ width: 100%;
+ height: 300px;
+ padding: 10px;
+ text-shadow: 0 0 15px rgba(0,0,0,0.4);
+ position: relative;
+ top: 150px;
+ overflow: auto;
+ line-height: 16px;
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+}
+
+.ingredients-card-show p {
+  font-size: 18px;
+ }
+
+.ingredient-icons .fa-trash {
+  margin-right: 4px;
+}
+
+.ingredient-icons .fa-trash:hover {
+  font-size: 18px;
+}
+
+.ingredient-icons .fa-edit:hover {
+  font-size: 18px;
+}
+
+.show-container {
+  display: flex;
+  width: 90%;
+  margin: 200px auto;
+  justify-items: space-between;
+}
+
+.show-sub-container {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  width: 100%;
+  margin-left: 40px;
+  border-radius: 16px;
+  padding: 16px;
+}
+
+.add-ingredient-button {
+  color: crimson;
+  border: 1px solid crimson;
+  border-radius: 24px;
+  padding: 14px;
+  transition: 0.6s;
+  margin-bottom: 8px;
+}
+
+.add-ingredient-button:hover {
+  color: white;
+  background-color: crimson;
+
+}
+
+.add-ingredient-button a:hover {
+  text-decoration: none;
+  color: inherit;
+}
+
+
+
+.add-cocktail-form {
+  width: 70%;
+  background-color: white;
+  margin: 200px auto;
+  border-radius: 16px;
+  padding: 24px;
+}
+
+
+.add-cocktail-button {
+  color: crimson;
+  border: 1px solid crimson;
+  border-radius: 24px;
+  padding: 14px;
+  transition: 0.6s;
+  margin-bottom: 8px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
