--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,25 +1,19 @@
-<form action="/" method="post">
-  <div class="form-group">
-    <label for="exampleFormControlInput1">Cocktail Name</label>
-    <input type="text" class="form-control" id="exampleFormControlInput1" name="cocktail" placeholder="Gin Tonic">
-  </div>
-  <div class="form-group">
-    <label for="exampleFormControlSelect1">Gin</label>
-    <select class="form-control" id="exampleFormControlSelect1" name="ingredient">
-      <% Ingredient.all.each do |ingredient| %>
-        <option><%= ingredient.name %></option>
-      <% end %>
-    </select>
-  </div>
-  <div class="form-group">
-    <label for="exampleFormControlTextarea1">Dose</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="1" name="description"></textarea>
-  </div>
-  <div class="form-group">
-    <label for="photo">Photo</label>
-    <input class="form-control" type="file" id="photo" rows="1" name="photo"></input>
-  </div>
+<div class="add-cocktail-form">
 
-  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+  <%= simple_form_for(@cocktail) do |f| %>
+    <%= f.error_notification %>
+    <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+
+    <div class="form-inputs" >
+      <%= f.input :name %>
+      <%= f.input :photo, as: :file %>
+
+    </div>
+
+    <div class="form-actions">
+      <%= f.button :submit, "Create Cocktail", class: "add-cocktail-button" %>
+    </div>
+  <% end %>
+
+</div>
+
