--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <title>RailsMisterCocktail</title>
@@ -15,23 +15,17 @@
   </head>
 
   <body>
-
-    <div class="navbar-fixed">
-      <nav>
-        <div class="nav-wrapper">
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><%= link_to 'Home', root_path %></li>
-            <li>
-              <form class="search-bar" method="post" action="/query">
-                  <input id="search" type="search" name="cocktail" required placeholder="search cocktail">
-                  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-              </form>
-            </li>
-            <li><%= link_to 'Add Cocktail', new_path %></li>
-          </ul>
-        </div>
-      </nav>
+    <div class="container">
+      <%= simple_form_for :search, url: root_path, method: "GET", html: { autocomplete: "off" } do |f| %>
+        <%= f.input_field :query,  placeholder: "Search cocktail", html: { class: "search" } %>
+      <% end %>
     </div>
+
+    <div id="logo"><%= link_to 'Marseo Lounge', root_path %></div>
+    <div id="add-button"><%= link_to 'Add Cocktail', new_cocktail_path %></div>
+
+
+<!--/.Navbar-->
 
     <%= yield %>
 
