--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,6 +52,19 @@ a:hover {
   text-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
+@media (max-width: 560px) {
+  #logo {
+    font-size: 20px;
+    padding: 18px;
+  }
+
+  #add-button {
+    padding: 10px;
+    font-size: 12px;
+  }
+}
+
+
 #add-button {
   position: absolute;
   right: 30px;
